# runtime

./: .gitignore
eng/native/: configurecompiler.cmake
eng/native/lib/: nlsdl.lib
src/coreclr/: clrdefinitions.cmake  pgosupport.cmake
src/coreclr/src/ToolBox/: CMakeLists.txt
src/coreclr/src/debug/createdump/: CMakeLists.txt
src/coreclr/src/debug/debug-pal/: CMakeLists.txt
src/coreclr/src/debug/di/: cordb.cpp  rspriv.h  rsthread.cpp
src/coreclr/src/debug/ee/: rcthread.cpp
src/coreclr/src/debug/inc/: dbgipcevents.h
src/coreclr/src/dlls/dbgshim/: CMakeLists.txt
src/coreclr/src/dlls/mscordac/: CMakeLists.txt
src/coreclr/src/dlls/mscordbi/: CMakeLists.txt
src/coreclr/src/dlls/mscoree/: mscoree.cpp  mscorwks_ntdef.src  unixinterface.cpp
src/coreclr/src/gc/: CMakeLists.txt  handletablecache.cpp
src/coreclr/src/gc/env/: gcenv.base.h
src/coreclr/src/gc/sample/: CMakeLists.txt
src/coreclr/src/gc/windows/: gcenv.windows.cpp
src/coreclr/src/hosts/coreconsole/: CMakeLists.txt
src/coreclr/src/hosts/corerun/: CMakeLists.txt
src/coreclr/src/hosts/coreshim/: CMakeLists.txt
src/coreclr/src/ilasm/: CMakeLists.txt
src/coreclr/src/ildasm/exe/: CMakeLists.txt
src/coreclr/src/inc/: check.h  check.inl  clrhost.h  clrnt.h  contract.h  eventtracebase.h  nlsdl.h  ntdll.h  ostype.h  predeftlsslot.h  stresslog.h  utilcode.h  winwrap.h  winxpwrap.h
src/coreclr/src/jit/: CMakeLists.txt  ee_il_dll.cpp
src/coreclr/src/scripts/: genEtwProvider.py
src/coreclr/src/tools/crossgen/: CMakeLists.txt
src/coreclr/src/utilcode/: CMakeLists.txt  check.cpp  clrhost.cpp  clrhost_nodependencies.cpp  debug.cpp  hostimpl.cpp  stresslog.cpp  util.cpp  util_nodependencies.cpp  winfix.cpp  winxpwrap.cpp
src/coreclr/src/vm/: ClrEtwAll.man  ceemain.cpp  ceemain.h  comsynchronizable.cpp  corelib.h  corhost.cpp  crst.cpp  crst.h  dwreport.cpp  dwreport.h  eedbginterface.h  eedbginterfaceimpl.cpp  eedbginterfaceimpl.h  eventpipethread.cpp  eventpipethread.h  eventtrace.cpp  excep.cpp  gctoclreventsink.cpp  jitinterface.cpp  method.cpp  multicorejit.cpp  multicorejitimpl.h  object.h  proftoeeinterfaceimpl.cpp  rejit.inl  stackwalk.cpp  threads.cpp  threads.h  threads.inl  threadsuspend.cpp  util.cpp  util.hpp
src/coreclr/src/vm/arm/: stubs.cpp
src/installer/corehost/Windows/: gen-buildsys-win.bat
src/installer/corehost/cli/: common.cmake
src/libraries/Native/Windows/: CMakeLists.txt
src/libraries/System.Private.CoreLib/src/: System.Private.CoreLib.Shared.projitems
(+37 files in other folders)
